--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,15 @@
 [submodule "images"]
 	path = images
-    url = https://github.com/pibook/images.git
-    branch = master
+	url = https://github.com/AlexisTsiranidis/images.git
+	branch = 2018099
 [submodule "_gallery"]
 	path = _gallery
-	url = https://github.com/pibook/_gallery.git
-	branch = master
+	url = https://github.com/AlexisTsiranidis/_gallery.git
+	branch = 2018099
 [submodule "_includes/extras"]
 	path = _includes/extras
-	url = https://github.com/pibook/extras.git
-	branch = master
+	url = https://github.com/AlexisTsiranidis/extras.git
+	branch = 2018099
 [submodule "_quotes"]
 	path = _quotes
 	url = https://github.com/pibook/_quotes.git
